2011-12-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: For MacOS the option -DNO_CHOWN has been be added to the compile time flags.
	  This is necessary because Darwin will create files with the
	  file-owner-group set to the file-owner-group of the directory - EVEN if
	  the caller is not a member of the group! Chowning *from* the group is ok,
	  chowning *to* the group is not - and this will make unix2dos fail when it
	  tries to restore the permissions.
	  Thanks to Wolf Geldmacher.
	  See bug report 3444337, https://sourceforge.net/tracker/?func=detail&atid=1234808&aid=3444337&group_id=292083

2011-11-16 Erwin Waterlander <waterlan@xs4all.nl>
	* README.txt, man/man1/dos2unix.pod: Freshmeat changed name to Freecode.

2011-11-12 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Fix for MSYS.

2011-10-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Support OS/2, and Watcom C for Win32.
	* wccwin32.mak: New makefile for Open Watcom for Win32.

2011-08-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Added RPM_OPT_FLAGS to LDFLAGS. Required for
	  cross-platform RPM package building.

2011-08-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Home page URL: change to http://waterlan.home.xs4all.nl/dos2unix.html

2011-08-09 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.1

2011-08-08 Julio A. Freyre-Gonzalez <jfreyreg@gmail.com>
	* Spanish translation of messages and manual.

2011-06-26 Erwin Waterlander <waterlan@xs4all.nl>
	* bugfix: dos2unix changes ownership and permissions on file.
	  When an other user (e.g. root) than the owner has write permission
	  on the input file, dos2unix changes owner, group and umask in old
	  file mode to the other user's owner, group and umask who runs
	  dos2unix. Fixed only for Unix. Thanks to Christopher Williams.
	  See http://sourceforge.net/tracker/?func=detail&aid=3327171&group_id=292083&atid=1234808
	* Keep permissions also on Windows. Use chmod() i.s.o. fchmod().
