@@ -1,3 +1,3 @@
-DOS2UNIX_VERSION = 5.3.2-beta1
-DOS2UNIX_VERSION_SHORT = 532b1
-DOS2UNIX_DATE = 2011-12-02
+DOS2UNIX_VERSION = 5.3.2-beta2
+DOS2UNIX_VERSION_SHORT = 532b2
+DOS2UNIX_DATE = 2011-12-06
